--- a/singolo1.css
+++ b/singolo1.css
@@ -52,7 +52,7 @@ header h1:after{
 }
 
 header ul.header_links {
-    padding-top: 5px;
+    padding-top: 6px;
     display: flex;
     justify-content: space-between;
     text-transform: uppercase;
@@ -101,4 +101,88 @@ header a{
     background-color: #ea676b;
 }
 
-/**/
+
+
+/*services*/
+.services{
+    height: 495px;
+    padding: 61px 30px 0 40px;
+    background: #f2f2f2;
+}
+
+.services h2 {
+    color: #666d89;
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: -0.3px;
+    line-height: 1;   
+}
+
+.services .about_text{
+    margin-top: 21px;
+    color: #767e9e;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.7;
+    text-align: justify;
+    letter-spacing: -0.1px;
+}
+
+.service_list {
+    margin-top: 45px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.service {
+    width: 310px;
+    margin-bottom: 32px;    
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.service_icon {
+    margin-top: 2px;
+    margin-right: 10px;
+}
+
+.service:hover .service_icon {
+    background-color: #ce5e563f;
+    border-radius: 50%;
+}
+
+.service_description {
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
+.service_title {
+    font-size: 1.8rem;
+    font-weight: 900;
+    color: #666d89;
+}
+
+.service_text {
+    margin-top: 7px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-align: justify;
+    word-wrap: break-word;
+    word-break: break-all;
+    hyphens: auto;
+    line-height: 21px;
+    letter-spacing: 0.3px;
+    color: #767e9e;
+    overflow: hidden;
+}
+
+.services_line {
+    width: 100%;
+    height: 6px;
+    background-color: #fff;
+}
+
+
