--- a/singolo1.css
+++ b/singolo1.css
@@ -89,12 +89,51 @@ header a{
 }
 
 /* slider */
-.slider {
+.img-slider {
     height: 594px; 
     background: #f06c64;
-
+    position: relative;
+    
 }
 
+.btn_prev, .btn_next {
+   position: absolute; 
+   top: 280px;
+}
+
+.btn_prev{
+    left: 43px;    
+}
+
+.btn_next{
+    right: 43px;    
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 49px 10px 60px;
+}
+
+.images {
+    display: block;
+    background: url(assets/phone_bg1.png) no-repeat;
+    background-position: 0 -70px;
+    margin: 0 72px;
+    margin-top: -1px;
+     border-radius: 27px; 
+    box-shadow: 25px 25px #ce5d56, 10px 10px #ce5d56, 14px 14px #ce5d56, 20px 20px #ce5d56;
+}
+
+.images:last-child {
+    background: url(assets/phone_bg2.png) no-repeat;
+    background-position: -105px -56px;
+    margin-top: -3px;
+    margin-left: 148px;
+    transform: rotateZ(90deg);
+    box-shadow: 25px -25px #ce5d56, 10px -10px #ce5d56, 14px -14px #ce5d56, 20px -20px #ce5d56;
+}
 .slider_line {
     width: 100%;
     height: 6px;
