--- a/singolo1.css
+++ b/singolo1.css
@@ -31,7 +31,7 @@ body {
 
 header {
     width: 100%;
-    height: 90px;
+    height: 84px;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -48,6 +48,9 @@ header h1{
 
 header h1:after{
     content: "*";
+    color: #dc655f;
+}
+header h1 a:hover{
     color: #dc655f;
 }
 
@@ -72,14 +75,21 @@ header ul.header_links li{
 
 header ul.header_links li:not(:first-child):before {
     content: "·";
-    color: red;
-    /* color: #494e62; */
+    /* color: red; */
+    color: #494e62;
     margin-left: -16px;
     position: absolute;
 }
 
 header a{
     color: #fff;
+}
+header a:hover{
+    color: #dc655f;
+}
+
+header a.active{
+    color: #dc655f;
 }
 
 .header_line {
@@ -100,20 +110,23 @@ header a{
    position: absolute; 
    top: 280px;
 }
+.btn_prev:hover, .btn_next:hover {
+    cursor: pointer;
+}
 
 .btn_prev{
     left: 43px;    
 }
 
 .btn_next{
-    right: 43px;    
+    right: 42px;    
 }
 
 .slider {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 49px 10px 60px;
+    padding: 53px 10px 60px;
 }
 
 .images {
@@ -188,8 +201,11 @@ header a{
     margin-right: 10px;
 }
 
+.services:hover{
+    cursor: pointer;
+}
 .service:hover .service_icon {
-    background-color: #ce5e563f;
+    background-color: #918c8b3f;
     border-radius: 50%;
 }
 
