--- a/singolo2.css
+++ b/singolo2.css
@@ -45,6 +45,7 @@
       height: 870px;
       background-color: #2d303a;
       padding: 64px 20px 30px 40px;
+      box-shadow: 0 6px #323746;
 
   }
   .portfolio h2 {
@@ -104,6 +105,7 @@
     height: 735px;
     background-color: #f2f2f2;
     padding: 64px 20px 30px 40px;
+    box-shadow: 0 6px #ffffff;
 
 }
 .about_us h2 {
@@ -156,23 +158,39 @@
     letter-spacing: 0.32px;
 }
 
-a .sotial{
-    border: 1px solid red;
-    width: 20px;
-    height: 20px;
+.person_sotial {
+    margin-top: 25px;
+    margin-left: 1px;
+    display: flex;
+ }
+.person_sotial a{
+    display: flex;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #6a718c;
+    border-radius: 50%;
+    margin-right: 8.1px;
+}
+
+.person_sotial .sotial{
+   margin: 8.4px 5px;
+   width: 100%;
+   display: flex;
+   background-size: contain;
+
 }
 
 .facebook{
-    background-image: url(assets/facebook.svg); 
+    background: url(assets/facebook.svg) no-repeat center; 
 }
 
 .google{
-    background-image: url(assets/google+.svg); 
+    background: url(assets/google+.svg) no-repeat center; 
 }
 
 .twitter{
-    background-image: url(assets/twitter.svg); 
+    background: url(assets/twitter.svg) no-repeat center; 
 }
 .linkedin{
-    background-image: url(assets/linkedin.svg); 
+    background: url(assets/linkedin.svg) no-repeat center; 
 }
