--- a/singolo2.css
+++ b/singolo2.css
@@ -84,13 +84,21 @@
       margin-right: 10px;
   }
 
+  .f_button:hover {
+      cursor: pointer;
+      color: #dedede;
+      border-color: #dedede;
+  }
+
   .filter .active {
       border-color: #dedede;
       color: #dedede;
   }
 
   .portfolio_images {
+      height: 610px;
       margin-top: 19px;
+      overflow: hidden;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -99,6 +107,9 @@
   .portfolio_image{
       margin: 0 20px 18px 0;
       
+  }
+  .portfolio_image:hover{
+      transform: scale(1.07);
   }
 
 .about_us {
@@ -139,15 +150,16 @@
 }
 
 .person_info h3{
+    width: 100%;
     margin-top: 15px;
     font-family: 'LatoBlack';
     font-size: 1.8rem;
     font-weight: 900;
-    color: #9296a8;
     letter-spacing: 0.1px;
     color: #666d89;
 
-
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .person_info p{
@@ -170,6 +182,12 @@
     border: 1px solid #6a718c;
     border-radius: 50%;
     margin-right: 8.1px;
+}
+
+.person_sotial a:hover{
+    cursor: pointer;
+    border: 1px solid #163cd4;
+    background-color: #ec920a;
 }
 
 .person_sotial .sotial{
