--- a/singolo3.css
+++ b/singolo3.css
@@ -44,7 +44,7 @@ body {
 .quote {
     height: 655px;
     background-color: #f06c64;
-    padding: 64px 20px 30px 40px;
+    padding: 63px 20px 30px 40px;
     box-shadow: 0 6px #ea676b;
 
   }
@@ -53,36 +53,188 @@ body {
     font-size: 3rem;
     font-weight: 900;
     color: #f0d8d9;
-    letter-spacing: 0.15px;
+    letter-spacing: 0.09px;
     line-height: 1;
   }
 
   .quote p {
   width: 100%;
-  margin-top: 22px;
+  padding-top: 21px;
   font-family: 'Lato';
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   color: #f0d8d9;  
-  letter-spacing: 0.18px;    
-  line-height: 1.7;
+  letter-spacing: -0.22px;    
+  line-height: 30px;
+  padding-right: 20px;
+  text-align: justify;
   }
-
+  .contacts-us {
+    display: inline-flex;
+  }
   .col-8 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: calc(100% / 12 * 8);
-  }
+    padding: 44px 20px 0 0;
+ }
+ .col-8 input {
+  margin-bottom: 15.85px;
+  line-height: 3.185;
+  padding-left: 14.5px;
+ }
+ .col-8 textarea {
+  /* margin-bottom: 15.8px; */
+  height: 200px;
+  padding-top: 10.8px;
+  padding-left: 14.5px;
+ }
 
-  .col-8 input,
-  .col-8 textarea {
-    color: #f48c8f;
-    background-color: #d6564f;
-    border-radius: 5px;
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 21.56px;
+.col-8 input,
+.col-8 textarea {
+  border: none;
+  color: #f48c8f;
+  background-color: #d6564f;
+  border-radius: 5px;
+  border-color: #d6564f;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
 
+.col-8 input::placeholder,
+.col-8 textarea::placeholder {
+  color: #f48c8f;
+}
 
+.col-4{
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 12 * 4);
+   padding: 43px 0px 0 0;  
+}
 
-  }
+.contact-info {
+  color:#f0d8d9;
+
+}
+
+.contact-info h3 {
+  font-size: 1.8rem;
+  line-height: 17.86px;
+  font-weight: 900;
+  letter-spacing: -0.12px;
+}
+
+.contact-info p {
+  padding-top: 10px;
+  font-size: 1.2rem;
+  font-weight: 400;  
+  line-height: 21.55px;
+  letter-spacing: -0.12px; 
+  text-align: justify;
+  hyphens: manual;
+  -moz-hyphens: manual;
+  -webkit-hyphens: manual;
+  -ms-hyphens: manual;
+}
+.contacts {
+  padding-top: 22px;
+  display: flex;
+  flex-direction: column;
+
+}
+.contact {
+  display: flex;
+  margin-bottom: 1.3px; 
+  padding: 0 auto 10px 0;
+  font-size: 1.2rem;
+  font-weight: 400;  
+  line-height: 21.55px;
+  letter-spacing: 0.09px;
+
+}
+
+.ico{
+  margin-top: 5px;
+  margin-left: px;
+  display: inline-flex;
+  width: 13px;
+  height: 13px;
+  margin-right: 9px;
+  padding: 2px auto 12px 5px; 
+}
+
+.ico-location{
+  background: url(assets/ico-location.svg) no-repeat center; 
+}
+
+.ico-phone{
+  background: url(assets/ico-phone.svg) no-repeat center; 
+}
+
+.ico-email{
+  background: url(assets/ico-mail.svg) no-repeat center; 
+}
+
+.footer {
+  height: 70px;
+  background-color: #2d303a;
+  box-shadow: 0 6px #2d303a;
+
+}
+.footer_info {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  /* padding: 0 10px; */
+}
+.footer_info p{
+  padding-top: 26px;
+  padding-left: 12px;
+  font-size: 1.2rem;
+  font-weight: 400;  
+  line-height: 21.55px;
+  letter-spacing: -0.12px;  
+  color:#6a718c; 
+}
+.footer_sotial {
+  padding: 0 2px 0 3px;
+  margin-top: 21px;
+  display: flex;
+ }
+.footer_sotial a{
+  display: flex;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #6a718c;
+  border-radius: 50%;
+  margin-right: 8.1px;
+}
+
+.footer_sotial a:hover{
+  cursor: pointer;
+  border: 1px solid #163cd4;
+  background-color: #ec920a;
+}
+.footer_sotial .sotial{
+  margin: 8px 4.9px 8.5px 5px;
+  width: 100%;
+  display: flex;
+  background-size: contain;
+
+}
+
+.facebook{
+  background: url(assets/facebook.svg) no-repeat center; 
+}
+
+.google{
+  background: url(assets/google+.svg) no-repeat center; 
+}
+
+.twitter{
+  background: url(assets/twitter.svg) no-repeat center; 
+}
+.linkedin{
+  background: url(assets/linkedin.svg) no-repeat center; 
+}
