--- a/singolo3.css
+++ b/singolo3.css
@@ -42,19 +42,19 @@ body {
 }
 
 .quote {
-    height: 655px;
-    background-color: #f06c64;
-    padding: 63px 20px 30px 40px;
-    box-shadow: 0 6px #ea676b;
+  height: 655px;
+  background-color: #f06c64;
+  padding: 63px 20px 30px 40px;
+  box-shadow: 0 6px #ea676b;
 
   }
   .quote h2 {
-    font-family: 'Lato';
-    font-size: 3rem;
-    font-weight: 900;
-    color: #f0d8d9;
-    letter-spacing: 0.09px;
-    line-height: 1;
+  font-family: 'Lato';
+  font-size: 3rem;
+  font-weight: 900;
+  color: #f0d8d9;
+  letter-spacing: 0.09px;
+  line-height: 1;
   }
 
   .quote p {
@@ -69,14 +69,14 @@ body {
   text-align: justify;
   }
   .contacts-us {
-    display: inline-flex;
+  display: inline-flex;
   }
   .col-8 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: calc(100% / 12 * 8);
-    padding: 44px 20px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: calc(100% / 12 * 8);
+  padding: 44px 20px 0 0;
  }
  .col-8 input {
   margin-bottom: 15.85px;
@@ -100,10 +100,29 @@ body {
   font-size: 1.2rem;
   font-weight: 400;
 }
+.col-8 input:invalid {
+  /* border: 1px dashed #ffffff; */
+}
 
 .col-8 input::placeholder,
 .col-8 textarea::placeholder {
   color: #f48c8f;
+}
+
+.btn {
+
+}
+
+.btn-send{
+  margin-top: 15px;
+  width: 200px;
+}
+
+.btn-send:hover{
+  cursor: pointer;
+  border: 1px solid #ffffff;
+  color:#ffffff;
+  box-shadow: 1px 1px 2px black, 0 0 1em red;
 }
 
 .col-4{
@@ -115,6 +134,8 @@ body {
 
 .contact-info {
   color:#f0d8d9;
+  text-decoration: none;
+
 
 }
 
@@ -152,6 +173,21 @@ body {
   line-height: 21.55px;
   letter-spacing: 0.09px;
 
+}
+.contact a{
+  margin-top: 4px;
+  text-decoration: none;
+  color: #f0d8d9;
+}
+.contact a:last-child{
+  margin-top: 5px;
+}
+
+.contact a:hover{
+  margin-top: 5px;
+  text-shadow: 1px 1px 2px black, 0 0 1em red;
+  /* color: #f00e16; */
+  text-decoration: underline;
 }
 
 .ico{
@@ -238,3 +274,4 @@ body {
 .linkedin{
   background: url(assets/linkedin.svg) no-repeat center; 
 }
+
