--- a/singolo.css
+++ b/singolo.css
@@ -15,7 +15,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Loto', sans-serif;
   list-style: none;
   text-decoration: none;
   line-height: 1.2;
@@ -42,7 +42,7 @@ body {
 
 header {
   width: 100%;
-  height: 84px;
+  height: 90px;
   display: flex;
   justify-content:space-between;
   align-items: center;
@@ -78,7 +78,7 @@ header ul.header_links {
 
 header ul.header_links li{
   position: relative;
-  margin:0 15px;
+  margin:3px 14.9px 0;
   line-height: 1.5;
   letter-spacing: -0.3px;
   color: #ffffff;
@@ -167,7 +167,7 @@ header a.active{
 
 /*services*/
 .services{
-  height: 495px;
+  height: 494px;
   padding: 61px 30px 0 40px;
   background: #f2f2f2;
 }
@@ -176,18 +176,19 @@ header a.active{
   color: #666d89;
   font-size: 3rem;
   font-weight: 900;
-  letter-spacing: -0.3px;
+  letter-spacing: 0.12px;
   line-height: 1;   
 }
 
 .services .about_text{
   margin-top: 21px;
+  padding-right: 10px;
   color: #767e9e;
   font-size: 1.8rem;
   font-weight: 300;
-  line-height: 1.7;
+  line-height: 30px;
   text-align: justify;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.3px;
 }
 
 .service_list {
@@ -200,15 +201,16 @@ header a.active{
 
 .service {
   width: 310px;
-  margin-bottom: 32px;    
+  padding-bottom: 30px;    
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
 
 .service_icon {
-  margin-top: 2px;
+   margin-top: 2px; 
   margin-right: 10px;
+  margin-left: 1px;
 }
 
 .services:hover{
@@ -221,25 +223,28 @@ header a.active{
 
 .service_description {
   margin-left: 10px;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 .service_title {
+  padding-top:2px;
   font-size: 1.8rem;
   font-weight: 900;
+  line-height: 17.86px;
+  letter-spacing: 0.22px;
   color: #666d89;
 }
 
 .service_text {
-  margin-top: 7px;
+  padding-top: 9px;
   font-size: 1.2rem;
   font-weight: 400;
   text-align: justify;
   word-wrap: break-word;
   word-break: break-all;
   hyphens: auto;
-  line-height: 21px;
-  letter-spacing: 0.3px;
+  line-height: 21.56px;
+  letter-spacing: 0.55px;
   color: #767e9e;
   overflow: hidden;
 }
@@ -248,6 +253,176 @@ header a.active{
   width: 100%;
   height: 6px;
   background-color: #ffffff;
+}
+/*portfolio*/
+.portfolio {
+  height: 870px;
+  background-color: #2d303a;
+  padding: 60px 20px 30px 40px;
+  box-shadow: 0 6px #323746;
+
+}
+.portfolio h2 {
+  font-size: 3rem;
+  font-weight: 900;
+  color: #666d89;
+  letter-spacing: 0.3px;
+  line-height: 1;
+}
+
+.portfolio p {
+width: 100%;
+margin-top: 22px;
+font-size: 1.8rem;
+color: #666d89;  
+letter-spacing: -0.23px;    
+line-height: 1.7;
+}
+
+.filter {
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.f_button{
+  font-size: 1.2rem;
+  letter-spacing: 0.1px; 
+  line-height: 0.9;
+  color: #767e9e;
+  border: 2px solid #666d89;
+  border-radius: 5px;
+  padding: 5px 5.1px;
+  margin-right: 9px;
+}
+
+.f_button:hover {
+  cursor: pointer;
+  color: #dedede;
+  border-color: #dedede;
+}
+
+.filter .active {
+  border-color: #dedede;
+  color: #dedede;
+}
+
+.portfolio_images {
+  height: 610px;
+  margin-top: 19px;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio_image{
+  margin: 0 20px 18px 0;
+  
+}
+.portfolio_image:hover{
+  transform: scale(1.07);
+}
+/*about us*/
+.about_us {
+height: 735px;
+background-color: #f2f2f2;
+padding: 60px 20px 30px 40px;
+box-shadow: 0 6px #ffffff;
+
+}
+.about_us h2 {
+font-size: 3rem;
+font-weight: 900;
+color: #666d89;
+letter-spacing: 0.3px;
+line-height: 1;
+}
+
+.about_us p {
+width: 100%;
+margin-top: 20px;
+font-size: 1.8rem;
+font-weight: 300;
+color: #767e9e;  
+letter-spacing: -0.075px;    
+line-height: 1.7;
+}
+
+.person_list{
+margin-top: 45px;
+display: flex;
+justify-content: flex-start;
+}
+
+.person{
+width: 300px;
+margin-right:20px;
+}
+
+.person_info h3{
+width: 100%;
+margin-top: 14px;
+font-family: 'Lato';
+font-size: 1.8rem;
+font-weight: 900;
+letter-spacing: -0.1px;
+color: #666d89;
+white-space: nowrap;
+overflow: hidden;
+}
+
+.person_info p{
+margin-top: 10px;
+font-family: 'Lato';
+font-weight: 400;
+font-size: 1.2rem;
+text-align: justify;    
+color:#767e9e;
+letter-spacing: -0.06px;
+}
+
+.person_sotial {
+margin-top: 24px;
+margin-left: 1px;
+display: flex;
+}
+.person_sotial a{
+display: flex;
+width: 32px;
+height: 32px;
+border: 1px solid #6a718c;
+border-radius: 50%;
+margin-right: 8.1px;
+}
+
+.person_sotial a:hover{
+cursor: pointer;
+border: 1px solid #163cd4;
+background-color: #ec920a;
+}
+
+.person_sotial .sotial{
+ margin: 8px 4.9px 8.5px 5px;
+ width: 100%;
+ display: flex;
+ background-size: contain;
+
+}
+
+.facebook{
+background: url(assets/facebook.svg) no-repeat center; 
+}
+
+.google{
+background: url(assets/google+.svg) no-repeat center; 
+}
+
+.twitter{
+background: url(assets/twitter.svg) no-repeat center; 
+}
+.linkedin{
+background: url(assets/linkedin.svg) no-repeat center; 
 }
 
 
