--- a/style.css
+++ b/style.css
@@ -459,6 +459,7 @@ header a.active{
   background-color: #f06c64;
   padding: 63px 20px 30px 40px;
   box-shadow: 0 6px #ea676b;
+  position: relative;
 }
 
 .quote h2 {
@@ -666,6 +667,51 @@ header a.active{
   width: 100%;
   display: flex;
   background-size: contain;
+}
+
+#message-form{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #767e9e88;
+}
+#message-form.hidden {
+  display: none;
+}
+#message{
+  position: absolute;
+  top: calc( (100% - 500px) / 2);
+  left: calc( (100% - 500px) / 2);
+  padding: 20px;
+  width: 500px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background: #6d6b69;
+  border: 5px solid #2b2c2e;
+  border-radius: 20px;
+  text-align: center;
+
+}
+#message .detail {
+  font-size: 20px;
+  text-align: left;
+}
+
+#message .btn-close{
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  background: #ca5b5b;
+}
+
+#message .btn-close:hover{
+  background: #787a77;
+  border: 2px solid #444555
 }
 
 
